fixed map width and changed spacing

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -56,6 +56,8 @@ ul li.list {
 
    @media (max-width: 540px) {
     margin: 0px 2px 0px 12px;
+    width: 25px;
+    height: 25px;
     }
 }
 
@@ -133,7 +135,7 @@ ul li.list:nth-child(4) span {
   padding-bottom: 12px;
 
   @media (max-width: 540px) {
-    width: 110px !important;
+    width: 75px !important;
     padding-bottom: 4px;
   }
 }
@@ -166,7 +168,7 @@ ul li.list:nth-child(4) span {
   height: 144px;
 
   @media (max-width: 540px) {
-    height: 118px;
+    height: 91px;
   }
 }
 
