--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -63,5 +63,12 @@
   font-weight: bold;
 }
 
+.populate-schedule {
+
+  @media (max-width: 540px) {
+    font-size: 8px;
+  }
+}
+
 
 
